// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Test Suite shuold support filter with double quote 1`] = `"$filter=key eq 'val"'"`;

exports[`Filter Test Suite shuold support filter with double quote 2`] = `
Token {
  "next": 21,
  "position": 0,
  "raw": "$filter=key eq 'val"'",
  "type": "QueryOptions",
  "value": {
    "options": [
      Token {
        "next": 21,
        "position": 0,
        "raw": "$filter=key eq 'val"'",
        "type": "Filter",
        "value": Token {
          "next": 21,
          "position": 8,
          "raw": "key eq 'val"'",
          "type": "EqualsExpression",
          "value": {
            "left": Token {
              "next": 11,
              "position": 8,
              "raw": "key",
              "type": "FirstMemberExpression",
              "value": Token {
                "next": 11,
                "position": 8,
                "raw": "key",
                "type": "MemberExpression",
                "value": Token {
                  "next": 11,
                  "position": 8,
                  "raw": "key",
                  "type": "PropertyPathExpression",
                  "value": Token {
                    "next": 11,
                    "position": 8,
                    "raw": "key",
                    "type": "ODataIdentifier",
                    "value": {
                      "name": "key",
                    },
                  },
                },
              },
            },
            "right": Token {
              "next": 21,
              "position": 15,
              "raw": "'val"'",
              "type": "Literal",
              "value": "Edm.String",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`Filter Test Suite shuold support filter with other chars 1`] = `"$filter=key eq 'val$%^&*()_'"`;

exports[`Filter Test Suite shuold support filter with other chars 2`] = `
Token {
  "next": 28,
  "position": 0,
  "raw": "$filter=key eq 'val$%^&*()_'",
  "type": "QueryOptions",
  "value": {
    "options": [
      Token {
        "next": 28,
        "position": 0,
        "raw": "$filter=key eq 'val$%^&*()_'",
        "type": "Filter",
        "value": Token {
          "next": 28,
          "position": 8,
          "raw": "key eq 'val$%^&*()_'",
          "type": "EqualsExpression",
          "value": {
            "left": Token {
              "next": 11,
              "position": 8,
              "raw": "key",
              "type": "FirstMemberExpression",
              "value": Token {
                "next": 11,
                "position": 8,
                "raw": "key",
                "type": "MemberExpression",
                "value": Token {
                  "next": 11,
                  "position": 8,
                  "raw": "key",
                  "type": "PropertyPathExpression",
                  "value": Token {
                    "next": 11,
                    "position": 8,
                    "raw": "key",
                    "type": "ODataIdentifier",
                    "value": {
                      "name": "key",
                    },
                  },
                },
              },
            },
            "right": Token {
              "next": 28,
              "position": 15,
              "raw": "'val$%^&*()_'",
              "type": "Literal",
              "value": "Edm.String",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`Filter Test Suite shuold support filter with single quote 1`] = `"$filter=key eq 'T''A First'"`;

exports[`Filter Test Suite shuold support filter with single quote 2`] = `
Token {
  "next": 27,
  "position": 0,
  "raw": "$filter=key eq 'T''A First'",
  "type": "QueryOptions",
  "value": {
    "options": [
      Token {
        "next": 27,
        "position": 0,
        "raw": "$filter=key eq 'T''A First'",
        "type": "Filter",
        "value": Token {
          "next": 27,
          "position": 8,
          "raw": "key eq 'T''A First'",
          "type": "EqualsExpression",
          "value": {
            "left": Token {
              "next": 11,
              "position": 8,
              "raw": "key",
              "type": "FirstMemberExpression",
              "value": Token {
                "next": 11,
                "position": 8,
                "raw": "key",
                "type": "MemberExpression",
                "value": Token {
                  "next": 11,
                  "position": 8,
                  "raw": "key",
                  "type": "PropertyPathExpression",
                  "value": Token {
                    "next": 11,
                    "position": 8,
                    "raw": "key",
                    "type": "ODataIdentifier",
                    "value": {
                      "name": "key",
                    },
                  },
                },
              },
            },
            "right": Token {
              "next": 27,
              "position": 15,
              "raw": "'T''A First'",
              "type": "Literal",
              "value": "Edm.String",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`Filter Test Suite shuold support filter without double quote 1`] = `"$filter=key eq 'val'"`;

exports[`Filter Test Suite shuold support filter without double quote 2`] = `
Token {
  "next": 20,
  "position": 0,
  "raw": "$filter=key eq 'val'",
  "type": "QueryOptions",
  "value": {
    "options": [
      Token {
        "next": 20,
        "position": 0,
        "raw": "$filter=key eq 'val'",
        "type": "Filter",
        "value": Token {
          "next": 20,
          "position": 8,
          "raw": "key eq 'val'",
          "type": "EqualsExpression",
          "value": {
            "left": Token {
              "next": 11,
              "position": 8,
              "raw": "key",
              "type": "FirstMemberExpression",
              "value": Token {
                "next": 11,
                "position": 8,
                "raw": "key",
                "type": "MemberExpression",
                "value": Token {
                  "next": 11,
                  "position": 8,
                  "raw": "key",
                  "type": "PropertyPathExpression",
                  "value": Token {
                    "next": 11,
                    "position": 8,
                    "raw": "key",
                    "type": "ODataIdentifier",
                    "value": {
                      "name": "key",
                    },
                  },
                },
              },
            },
            "right": Token {
              "next": 20,
              "position": 15,
              "raw": "'val'",
              "type": "Literal",
              "value": "Edm.String",
            },
          },
        },
      },
    ],
  },
}
`;
